@@ -3,7 +3,8 @@ import os
 from refnx.reflect.reflect_model import (ReflectModel, reflectivity,
                                          MixedReflectModel, FresnelTransform)
 from refnx.reflect.structure import (Structure, SLD, Slab, Component,
-                                     sld_profile, Stack, MaterialSLD)
+                                     sld_profile, Stack, MaterialSLD,
+                                     MixedSlab)
 from refnx.reflect.interface import (Erf, Interface, Linear, Exponential,
                                      Tanh, Sinusoidal, Step)
 from refnx.reflect.spline import Spline
